overflow issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,9 @@
 main {
   padding-top: 60px;
 }
+html, body {
+  overflow-x: hidden;
+}
 
 #root {
   display: flex;
